--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  /* background-image: url("https://user-images.githubusercontent.com/74163812/113887841-d97e9080-978f-11eb-8314-1ad90bd2c021.png"); */
+  background-size: 100% 100%;
+  background-color: #303030;
+  /* width: 100%;
+  height: 100%; */
+  font-family: 'Special Elite', cursive;
+ }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
