--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,37 @@
 body {
-  /* background-image: url("https://user-images.githubusercontent.com/74163812/113887841-d97e9080-978f-11eb-8314-1ad90bd2c021.png"); */
   background-size: 100% 100%;
   background-color: #303030;
-  /* width: 100%;
-  height: 100%; */
   font-family: 'Special Elite', cursive;
  }
 
+ .jumbotron{
+  padding: 0px;
+  height: 90%;
+  width: 60%;
+  padding-top: 0px;
+  background-color: #efdfc8;
+  margin-top: 5%;
+  margin-left: 19%;
+  font-family: 'Special Elite', cursive;
+  border-style: solid;
+  flex-basis: auto;
+  position: static;
+  margin-bottom: 5%;
+}
+
+.card-img-top{
+  margin-left: 0px;
+  height: 65vh;
+  width: 25vw;
+}
+
+hr {
+  width: 100%;
+  height: 2px;
+  margin-left: 0px;
+  margin-right: 10px;
+  background-color:#000;
+  border: 0 none;
+  margin-top: 0px;
+  margin-bottom:5px;
+}
