--- a/src/component/ContactMe/ContactMe.css
+++ b/src/component/ContactMe/ContactMe.css
@@ -4,9 +4,9 @@
 }
 
 .advert{
-    margin-left: 30px;
-    height: 480px;
-    width: 320px;
+    margin-left: 10%;
+    height: 95%;
+    width: 90%;
     border-width: 8px;
     border-style: solid;
     border-color: #f2eddb;
