--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -1,3 +1,10 @@
+.caption{
+    background-color: #303030;
+    margin-left: -8vw;
+    margin-top: -15vh;
+    width: 100%; 
+}
+
 .description {
     width: 100%;
     top: 0;
@@ -7,6 +14,7 @@
 .image{
     width: 100%;
     height: 100%;
+    padding-bottom: 17vh;
 }
 
 #divInfo{
