--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   height: 90%;
   width: 60%;
   padding-top: 0px;
-  background-color: #efdfc8;
+  background-color: #fadec3;
   margin-top: 5%;
   margin-left: 19%;
   font-family: 'Special Elite', cursive;
@@ -17,22 +17,23 @@ body {
   flex-basis: auto;
   position: static;
   margin-bottom: 5%;
-  box-shadow: 0px 30px 40px -25px rgba(0, 0, 0, 1);
+  box-shadow: -25px -25px 25px -25px rgba(1, 1, 1, 1);
 }
 
 .card-img-top{
   margin-left: 0px;
   height: 65vh;
   width: 25vw;
+  margin-bottom: 0px;
 }
 
 hr {
   width: 100%;
-  height: 2px;
   margin-left: 0px;
   margin-right: 10px;
   background-color:#000;
   border: 0 none;
+  border-width: 2rem;
   margin-top: 0px;
   margin-bottom:5px;
 }
