--- a/src/component/AboutMe/AboutMe.css
+++ b/src/component/AboutMe/AboutMe.css
@@ -1,6 +1,5 @@
 .container-text{
     padding: 35px;
-
 }
 
 .display-4{
@@ -11,5 +10,23 @@
     height: 37vh;
     width: 20vw;
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    .RachelKenney{
+        height: 15vh;
+        width: 35vw;
+    }
+
+    .container-text{
+        padding: 2%;
+    }
+    
+  
+  } 
+  
 
 
