--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -39,3 +39,18 @@
 #divInfo{
     font-family: 'Special Elite', cursive;
    }
+
+   @media only screen 
+   and (min-device-width: 320px) 
+   and (max-device-width: 480px)
+   and (-webkit-min-device-pixel-ratio: 2)
+   and (orientation: portrait) { 
+    .caption{
+        background-color: #303030;
+        height: 10%;
+        width: 80vw; 
+    }
+     
+   
+   } 
+   
