--- a/src/component/ContactMe/ContactMe.css
+++ b/src/component/ContactMe/ContactMe.css
@@ -23,3 +23,15 @@
     color: black;
     font-family: 'Special Elite', cursive;
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    .advert{
+        display: none;
+    }
+    
+  
+  } 
