--- a/src/component/CarouselDesign/CarouselDesign.css
+++ b/src/component/CarouselDesign/CarouselDesign.css
@@ -2,7 +2,7 @@
     background-color: #303030;
     margin-left: -8.2vw;
     margin-top: -15vh;
-    width: 55vw; 
+    width: 100%; 
 }
 
 .pictitle{
@@ -24,3 +24,38 @@
 #divInfo{
     font-family: 'Special Elite', cursive;
    }
+
+   @media only screen 
+   and (min-device-width: 320px) 
+   and (max-device-width: 480px)
+   and (-webkit-min-device-pixel-ratio: 2)
+   and (orientation: portrait) { 
+
+    .carousel-caption{
+        width: 100%;
+        font-size: x-small;
+
+    }
+    .caption{
+        background-color: #303030;
+        margin-bottom: 0vh;
+        margin-left: -14.5vw;
+    }
+
+    #divInfo{
+        font-family: 'Special Elite', cursive;
+       }
+     
+       .fa-github{
+        color: #e16538;
+        font-size: 2vh;
+        text-decoration: none;
+    }
+    
+    .fa-github:hover {
+        color: #6dc4ca;
+        text-decoration: none;
+    }
+   
+   } 
+   
