--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -2,7 +2,7 @@
     background-color: #303030;
     margin-left: -8.2vw;
     margin-top: -15vh;
-    width: 55vw; 
+    width: 100%; 
 }
 
 .title{
@@ -45,12 +45,32 @@
    and (max-device-width: 480px)
    and (-webkit-min-device-pixel-ratio: 2)
    and (orientation: portrait) { 
+
+    .carousel-caption{
+        width: 100%;
+        font-size: x-small;
+
+    }
     .caption{
         background-color: #303030;
-        height: 10%;
-        width: 80vw; 
+        margin-bottom: 0vh;
+        margin-left: -14.5vw;
     }
+
+    #divInfo{
+        font-family: 'Special Elite', cursive;
+       }
      
+       .fa-github{
+        color: #e16538;
+        font-size: 2vh;
+        text-decoration: none;
+    }
+    
+    .fa-github:hover {
+        color: #6dc4ca;
+        text-decoration: none;
+    }
    
    } 
    
