--- a/src/component/ContactMe/ContactMe.css
+++ b/src/component/ContactMe/ContactMe.css
@@ -32,6 +32,13 @@
     .advert{
         display: none;
     }
+
+    .contactBtn{
+        background-color: #779e99 !important;
+        border-color: #779e99 !important;
+        font-family: 'Special Elite', cursive;
+        color:black;
+    }
     
   
   } 
