--- a/src/component/AboutMe/AboutMe.css
+++ b/src/component/AboutMe/AboutMe.css
@@ -27,6 +27,23 @@
     
   
   } 
+
+  @media only screen 
+  and (min-device-width: 1024px) 
+  and (max-device-width: 1366px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    .RachelKenney{
+        height: 11vh;
+        width: 16vw;
+    }
+
+    .container-text{
+        padding: 2%;
+    }
+    
+  
+  } 
   
 
 
