--- a/src/component/NavBar/NavBar.css
+++ b/src/component/NavBar/NavBar.css
@@ -9,10 +9,10 @@
     color:#303030;
 }
 
-.nav-link{
+#nav-link{
     font-family: 'Special Elite', cursive;
     margin-right: 1vw;
-    color:#303030;
+    color:#779e99;
 }
 
 @media only screen 
