--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,12 @@ body {
   margin-left: 0px;
   width: 100%;
   margin-bottom: 0px;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom:.2rem;
+  border-color: #000;
+  border-style:solid; 
 }
 
 hr {
