--- a/src/component/ContactMe/ContactMe.css
+++ b/src/component/ContactMe/ContactMe.css
@@ -34,8 +34,8 @@
     }
 
     #contactBtn{
-        background-color: #779e99 !important;
-        border-color: #779e99 !important;
+        background-color: #779e99;
+        border-color: #779e99;
         font-family: 'Special Elite', cursive;
         color:black;
     }
