--- a/src/component/NavBar/NavBar.css
+++ b/src/component/NavBar/NavBar.css
@@ -12,7 +12,7 @@
 #nav-link{
     font-family: 'Special Elite', cursive;
     margin-right: 1vw;
-    color:#779e99;
+    color:#577d79;
 }
 
 @media only screen 
