--- a/src/component/AboutMe/AboutMe.css
+++ b/src/component/AboutMe/AboutMe.css
@@ -44,6 +44,23 @@
     
   
   } 
+
+  @media only screen 
+  and (min-device-width: 1250px) 
+  and (max-device-width: 1400px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    .RachelKenney{
+        height: 15vh;
+        width: 35vw;
+    }
+
+    .container-text{
+        padding: 2%;
+    }
+    
+  
+  } 
   
 
 
