wording and ipad nav

--- a/src/component/NavBar/NavBar.css
+++ b/src/component/NavBar/NavBar.css
@@ -42,3 +42,32 @@ and (orientation: portrait) {
     }
 
 } 
+
+@media only screen 
+and (min-device-width: 1024px) 
+and (max-device-width: 1366px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (orientation: portrait) { 
+
+    .navbar{
+        background-color: #f6bba2;
+        color:#303030;
+        height: 50px;
+    }
+    
+    .navbar-brand{
+        background-color: #f6bba2;
+        font-family: 'Special Elite', cursive;
+        color:#303030;
+    }
+    
+    #nav-link{
+        width: 100%;
+        text-align: right;
+        background-color: #779e99;
+        font-family: 'Special Elite', cursive;
+        color:#303030;
+    }
+
+} 
+
