--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -6,6 +6,7 @@
     left:0;
     position:absolute;
     width: 100%; 
+    height: 50%;
 }
 .carousel-control-next, .carousel-control-prev {
     z-index:11;
@@ -46,7 +47,7 @@
 .image{
     width: 100%;
     height: 100%;
-    padding-bottom: 17vh;
+    padding-bottom: 20vh;
 }
 
 #divInfo{
