--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -6,7 +6,7 @@
     left:0;
     position:absolute;
     width: 100%; 
-    height: 10%;
+    height: 20px;
 }
 .carousel-control-next, .carousel-control-prev {
     z-index:11;
