--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -7,6 +7,7 @@
     position:absolute;
     width: 100%; 
     height: 130px;
+    margin-top: 50px;
 }
 .carousel-control-next, .carousel-control-prev {
     z-index:11;
