mobile caption edit 2

--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -69,7 +69,7 @@
         background-color: #303030;
         margin-bottom: 0vh;
         margin-left: -14.5vw;
-        height: 20%;
+        height: 80px;
     }
 
     #divInfo{
