--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -6,6 +6,7 @@
     left:0;
     position:absolute;
     width: 100%; 
+    height: 60%;
 }
 .carousel-control-next, .carousel-control-prev {
     z-index:11;
