--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -51,7 +51,7 @@
 .image{
     width: 100%;
     height: 100%;
-    padding-bottom: 100px;
+    margin-bottom: 100px;
     /* padding-bottom: 20vh; */
 }
 
