mobile margin test

--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -52,7 +52,6 @@
     width: 100%;
     height: 100%;
     margin-bottom: 8vh;
-    /* padding-bottom: 20vh; */
 }
 
 #divInfo{
@@ -91,6 +90,11 @@
         text-decoration: none;
     }
     
+    .image{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0vh;
+    }
    
    } 
    
