--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -48,10 +48,10 @@
     bottom: auto;
 }
 
-.webImage{
+.image{
     width: 100%;
     height: 100%;
-    margin-bottom: 50vh;
+    margin-bottom: 7vh;
 }
 
 #divInfo{
