--- a/src/component/CarouselItem/CarouselItem.css
+++ b/src/component/CarouselItem/CarouselItem.css
@@ -55,7 +55,7 @@
 }
 
 #divInfo{
-    font-family: 'Special Elite', cursive;
+    font-family: 'Inter', sans-serif;
    }
 
    @media only screen 
@@ -76,7 +76,7 @@
     }
 
     #divInfo{
-        font-family: 'Special Elite', cursive;
+        font-family: 'Inter', sans-serif;
        }
      
        .fa-github{
