--- a/src/component/Wrapper/Wrapper.css
+++ b/src/component/Wrapper/Wrapper.css
@@ -1,7 +1,7 @@
 .wrapper {
   background-size: 100% 100%;
   background-color: #303030;
-  font-family: 'Special Elite', cursive;
+  font-family: 'Inter', sans-serif;
   min-height: 100%;
   padding-bottom: 100px;
 }
