--- a/src/component/ContactMe/ContactMe.css
+++ b/src/component/ContactMe/ContactMe.css
@@ -1,8 +1,9 @@
 #contactBtn{
-    background-color: #779e99;
-    border-color: #779e99;
+    background-color: #A76759;
+    border-color: #A76759;
     font-family: 'Inter', sans-serif;
-    color:black;
+    color:#FAF6F0;
+    font-weight: 100;
 }
 
 .advert{
@@ -22,6 +23,7 @@
 .links-display-4{
     color: black;
     font-family: 'Inter', sans-serif;
+    font-weight: 100;
 }
 
 @media only screen 
