--- a/src/component/NavBar/NavBar.css
+++ b/src/component/NavBar/NavBar.css
@@ -1,18 +1,20 @@
 .navbar{
-    background-color: #f6bba2;
+    background-color: #A76759;
     color:#303030;
     height: 50px;
 }
 
 .navbar-brand{
     font-family: 'Inter', sans-serif;
-    color:#303030;
+    color:#FAF6F0;
+    font-weight: 100;
 }
 
 #nav-link{
     font-family: 'Inter', sans-serif;
+    font-weight: 100;
     margin-right: 1vw;
-    color:#577d79;
+    color:#FAF6F0;
 }
 
 @media only screen 
@@ -22,14 +24,14 @@ and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) { 
 
     .navbar{
-        background-color: #f6bba2;
+        background-color: ##A76759;
         color:#303030;
         height: 50px;
     }
     
     .navbar-brand{
         background-color: #f6bba2;
-        ffont-family: 'Inter', sans-serif;
+        font-family: 'Inter', sans-serif;
         color:#303030;
     }
     
@@ -38,7 +40,7 @@ and (orientation: portrait) {
         text-align: right;
         background-color: #779e99;
         font-family: 'Inter', sans-serif;
-        color:#303030;
+        color:#FAF6F0;
     }
 
 } 
