mobile banner size

--- a/src/component/AboutMe/AboutMe.css
+++ b/src/component/AboutMe/AboutMe.css
@@ -43,6 +43,10 @@
     .aboutBody{
         margin-top: 3vh;
     }
+
+    .card-img-top{
+        height: 65vh;
+    }
   
   } 
 
@@ -64,6 +68,10 @@
 
     .aboutBody{
         margin-top: 3vh;
+    }
+
+    .card-img-top{
+        height: 65vh;
     }
     
   
@@ -87,6 +95,10 @@
 
     .aboutBody{
         margin-top: 3vh;
+    }
+
+    .card-img-top{
+        height: 65vh;
     }
     
   
